--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -13,17 +13,19 @@
   img {
     position: relative;
     z-index: 5;
+    transition-property: border-color;
+    will-change: opacity;
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
       var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     border: 1px solid rgba(var(--foreground-rgb), 0.5);
     border-radius: 100%;
     width: 120px;
     height: 120px;
-    transition-property: border-color;
     @apply dg--transition-effect;
   }
   h1.headline {
     transition: color, font-size;
+    will-change: opacity;
     @apply dg--transition-effect
       dg--font-psb
       pt-7
@@ -34,13 +36,15 @@
       sm:text-4xl;
   }
   p {
-    padding-top: 1.75rem;
     transition-property: color, font-size;
+    padding-top: 1.75rem;
     @apply dg--transition-effect;
+    will-change: opacity;
   }
   a {
     transition: color, border-color;
     @apply dg--transition-effect;
+    will-change: opacity;
     border-bottom: 1px solid rgba(var(--foreground-rgb), 0.77);
     color: rgba(var(--text-accent-rgb), 0.77);
     &:hover,
@@ -52,10 +56,10 @@
 }
 
 .links {
-  @apply pt-7
-    items-stretch
+  @apply items-stretch
     px-8
     pb-3
+    pt-7
     sm:pb-5
     md:pb-9;
   .link-list {
@@ -66,10 +70,11 @@
   }
   .link {
     display: flex;
-    padding: 0.5rem;
-    line-height: 1;
-    color: rgb(var(--foreground-rgb-faded));
     transition-property: color;
+    will-change: opacity;
+    padding: 0.5rem;
+    color: rgb(var(--foreground-rgb-faded));
+    line-height: 1;
     @apply dg--transition-effect;
     &:hover,
     &:focus {
