--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -29,11 +29,18 @@
   --white: 223, 224, 224;
   --black: 19, 19, 20;
   text-rendering: optimizeLegibility !important;
+  :focus-visible {
+    outline: thin dotted rgb(var(--highlight-rgb));
+    outline-offset: 0.25rem;
+  }
 }
 
 html.light-theme {
   @apply dg--light-theme;
   @apply github-light;
+  :focus-visible {
+    outline-width: 2px;
+  }
 }
 
 html.dark-theme {
@@ -45,6 +52,9 @@ html.dark-theme {
   :root {
     @apply dg--light-theme;
     @apply github-light;
+    :focus-visible {
+      outline-width: 2px;
+    }
   }
 }
 
