--- a/front/src/lib/styles/components/nav.css
+++ b/front/src/lib/styles/components/nav.css
@@ -3,16 +3,17 @@
     flex-grow;
 }
 .skip-to-content {
-  @apply dg--btn-secondary
-    px-5
-    py-3
-    opacity-0;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
+  background-color: rgb(var(--background-end-rgb));
+  opacity: 0;
+  padding: 0.75rem 1.25rem;
   position: absolute;
   top: -3rem;
   transition: top 0.3s ease, opacity 0.3s ease, color 0.3s ease;
-  &:focus {
+  &:focus,
+  &:focus-visible {
     top: 1.77rem;
-    @apply opacity-100;
+    opacity: 1;
   }
 }
 
