--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -10,11 +10,10 @@
   align-items: center;
   transition-property: max-width;
   @apply dg--transition-effect;
-  img {
+  .bio-picture {
     position: relative;
     z-index: 5;
-    transition-property: border-color;
-    will-change: opacity;
+    transition-property: border-color, opacity;
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
       var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     border: 1px solid rgba(var(--foreground-rgb), 0.5);
@@ -22,10 +21,13 @@
     width: 120px;
     height: 120px;
     @apply dg--transition-effect;
+    opacity: 0;
+    &.loaded {
+      opacity: 1.0;
+    }
   }
   h1.headline {
     transition: color, font-size;
-    will-change: opacity;
     @apply dg--transition-effect
       dg--font-psb
       pt-7
@@ -39,12 +41,10 @@
     transition-property: color, font-size;
     padding-top: 1.75rem;
     @apply dg--transition-effect;
-    will-change: opacity;
   }
   a {
     transition: color, border-color;
     @apply dg--transition-effect;
-    will-change: opacity;
     border-bottom: 1px solid rgba(var(--foreground-rgb), 0.77);
     color: rgba(var(--text-accent-rgb), 0.77);
     &:hover,
