build(front): adjusts post layout and typography

--- a/front/src/lib/styles/pages/posts.css
+++ b/front/src/lib/styles/pages/posts.css
@@ -3,6 +3,7 @@
     text-align: center;
   }
   .summary {
+    @apply dg--font-lb;
     margin: auto auto 2rem;
     @screen md {
       max-width: 77%;
