--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -14,11 +14,16 @@
     display: block;
     position: relative;
     z-index: 1;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     width: 100%;
-    height: 400px;
-    @apply shadow-xl;
+    height: 277px;
+    @screen sm {
+      height: 400px;
+    }
     @screen md {
       top: -5rem;
+      left: 0;
     }
     &.hide {
       height: 0;
@@ -40,9 +45,9 @@
       height: 277px;
       max-height: 100%;
       @screen sm {
-        height: 400px;
         left: -1%;
         width: 102%;
+        height: 400px;
       }
       @screen md {
         left: 0;
@@ -71,13 +76,13 @@
     ~ .post-article,
     ~ .post-aside,
     ~ .aside-toggle {
-      top: -9.33rem;
+      top: -1rem;
       z-index: 8;
       @screen sm {
         top: -1.6rem;
       }
       @screen md {
-        top: -7rem;
+        top: -6.3rem;
       }
     }
   }
@@ -90,16 +95,18 @@
   }
   h1.post-title {
     z-index: 5;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    line-height: 1.2;
+    margin-bottom: 0;
+    padding: 0 1rem;
     text-shadow: 0 -0.11rem 1.5rem rgba(var(--background-saturated), 0.77);
+    line-height: 1;
+    @screen sm {
+      line-height: 1.2;
+    }
   }
   .aside-toggle {
     display: inline;
     float: right;
   }
-  .post-article,
   .post-article {
     display: block;
     float: none;
@@ -140,6 +147,9 @@
         }
       }
     }
+    h2:first-of-type {
+      padding-top: 0;
+    }
     h2.footnotes-title {
       margin-top: 3rem;
     }
@@ -174,6 +184,44 @@
         font-size: 1.33rem;
         line-height: 1.33;
       }
+    }
+  }
+}
+
+.post .summary {
+  @apply dg--font-lb;
+  text-wrap: pretty;
+  margin: 0;
+  padding: 1.5rem 1rem;
+  font-size: 1.2rem;
+  font-size: 1rem;
+  text-indent: 0;
+  @screen md {
+    padding: 1.75rem 0.75rem;
+    font-size: 1.2rem;
+  }
+}
+@supports (initial-letter: 2) {
+  .post .summary::first-letter {
+    @apply dg--font-lbb;
+    -webkit-initial-letter: 2;
+    initial-letter: 2;
+    margin-right: 0.5rem;
+    color: rgb(var(--highlight-rgb));
+    font-weight: bold;
+  }
+}
+@supports not (initial-letter: 2) {
+  .post .summary::first-letter {
+    @apply dg--font-lbb;
+    vertical-align: middle;
+    float: left;
+    padding-top: 0.5rem;
+    padding-right: 0.33rem;
+    color: rgb(var(--highlight-rgb));
+    font-size: 3rem;
+    @screen md {
+      font-size: 3.5rem;
     }
   }
 }
