--- a/front/src/lib/styles/components/nav.css
+++ b/front/src/lib/styles/components/nav.css
@@ -3,16 +3,19 @@
     flex-grow;
 }
 .skip-to-content {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
-  background-color: rgb(var(--background-end-rgb));
-  opacity: 0;
-  padding: 0.75rem 1.25rem;
   position: absolute;
   top: -3rem;
-  transition: top 0.3s ease, opacity 0.3s ease, color 0.3s ease;
+  opacity: 0;
+  transition:
+    top 0.3s ease,
+    opacity 0.3s ease,
+    color 0.3s ease;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
+  background-color: rgb(var(--background-end-rgb));
+  padding: 0.75rem 1.25rem;
   &:focus,
   &:focus-visible {
-    top: 1.77rem;
+    top: 2rem;
     opacity: 1;
   }
 }
@@ -22,17 +25,17 @@
     text-xl
     sm:ml-[2px]
     sm:text-2xl;
-    transition: unset;
-    transition: font-size, color;
-    @apply dg--transition-effect;
-    letter-spacing: -0.025em;
-    line-height: 1;
-    color: rgb(var(--foreground-color));
-    &:hover,
-    &:focus,
-    &:active {
-      color: rgb(var(--highlight-rgb));
-    }
+  transition: unset;
+  transition: font-size, color;
+  transition-duration: 0.33s;
+  color: rgb(var(--foreground-color));
+  line-height: 1;
+  letter-spacing: -0.025em;
+  &:hover,
+  &:focus,
+  &:active {
+    color: rgb(var(--highlight-rgb));
+  }
 }
 
 .nav-bar {
@@ -57,10 +60,10 @@
     align-text-top
     text-sm;
   opacity: 0.42;
-  transition: opacity, border-color;
+  transition: opacity, color, border-color;
   @apply dg--transition-effect;
   border-bottom-color: rgb(var(--foreground-rgb));
-  color: rgb(var(--text-accent-rgb));
+  color: rgb(var(--link-rgb));
   &:hover,
   &:focus {
     opacity: 1;
@@ -68,11 +71,15 @@
   }
   &.active {
     opacity: 1;
+    cursor: default;
+    border-bottom-color: rgb(var(--highlight-rgb));
     color: rgb(var(--text-accent-rgb));
-    &:hover,
-    &:focus {
-      opacity: 1;
-      color: rgb(var(--text-accent-rgb));
+    &.subactive {
+      cursor: pointer;
+      &:hover,
+      &:focus {
+        color: rgb(var(--foreground-rgb));
+      }
     }
   }
 }
