--- a/front/src/lib/styles/components/tw-components.css
+++ b/front/src/lib/styles/components/tw-components.css
@@ -1,12 +1,12 @@
 @layer components {
   .dg--link-hover {
     transition: color, border-color;
-    color: rgba(var(--text-accent-rgb), 0.77);
+    color: rgba(var(--link-color), 0.77);
     &:hover,
     &:focus,
     &:active,
     &.active {
-      color: rgba(var(--text-accent-rgb), 1);
+      color: rgba(var(--link-color), 1);
     }
   }
   .dg--btn-primary {
