--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -43,14 +43,14 @@
     @apply dg--transition-effect;
   }
   a {
-    transition: color, border-color;
-    @apply dg--transition-effect;
+    transition: filter, border-color;
+    transition-duration: 0.33s;
     border-bottom: 1px solid rgba(var(--foreground-rgb), 0.77);
-    color: rgba(var(--text-accent-rgb), 0.77);
+    color: rgb(var(--link-rgb));
     &:hover,
     &:focus {
       border-color: rgb(var(--highlight-rgb));
-      color: rgba(var(--text-accent-rgb), 1);
+      filter: brightness(1);
     }
   }
 }
