build(front): adjusts background radial-gradient to 100vh; updates link styles

--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -101,7 +101,12 @@
       }
       .icon-code-copied {
         display: inline;
-        opacity: 1.0;
+        opacity: 0;
+      }
+      &.copying {
+        .icon-code-copied {
+          opacity: 1;
+        }
       }
     }
   }
