--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -125,7 +125,7 @@
       transition-timing-function: var(--transition-timing-function);
       &:hover,
       &:focus {
-        color: rgba(var(--link-rgb), 1);
+        color: rgba(var(--foreground-rgb), 1);
         border-bottom: 1px solid rgba(var(--highlight-rgb), 1);
       }
     }
