--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -3,36 +3,44 @@
   /* justify-items: top; */
 }
 .category {
-  margin-top: 7rem;
+  /* margin-top: 7rem; */
   margin-bottom: 3.33rem;
   border-radius: 0.5rem;
   border-top-right-radius: 0;
-  background-color: rgba(var(--background-saturated), 0.77);
   padding: 2.33rem 0;
-  @apply shadow-xl;
   @screen md {
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     padding: 2.33rem;
   }
   .category-head {
     @apply dg--font-lb;
     display: flex;
+    position: relative;
+    /* top: -6.5rem; */
     flex-direction: column;
     align-items: center;
-    position: relative;
-    top: -6.5rem;
-    padding-bottom: 1rem;
-    min-height: 80px;
+    /* padding-bottom: 1rem; */
     @screen md {
-      padding-bottom: 2rem;
-      top: -7.5rem;
+      /* top: -7.5rem; */
+      /* padding-bottom: 2rem; */
     }
     h1.page-heading {
       margin-bottom: 0;
     }
     .category-name {
+      margin-bottom: 0;
       max-width: 77%;
       text-align: center;
+      span {
+        opacity: 0;
+        transition: opacity 0.5s;
+        &.fade-in {
+          opacity: 1;
+        }
+        &.fade-out {
+          opacity: 0;
+        }
+      }
     }
     p {
       max-width: 77%;
@@ -47,7 +55,7 @@
         background-color: rgba(var(--background-saturated), 0.77);
       }
     }
-    .page-transition-container {
+    .transition-fade-container {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -57,34 +65,56 @@
   .category-posts-list,
   .category-aside {
     position: relative;
-    top: -8rem;
-    margin-bottom: -8rem;
+    @screen md {
+      padding-top: 0;
+    }
     li {
       list-style-type: none;
     }
   }
   .category-posts-list {
-    padding-right: 1rem;
-    padding-left: 1.5rem;
+    /* border: thin solid red; */
+    box-sizing: border-box;
     width: 100%;
-    min-height: 80px;
-    overflow: hidden;
+    & * {
+      /* border: thin solid red !important; */
+    }
     @screen sm {
       float: left;
-      padding-right: 0.5rem;
       width: 72%;
     }
+    p.summary {
+      margin: 0;
+      padding-top: 0.75rem;
+    }
+    .transition-elastic-fly-container {
+      @apply shadow-xl;
+      background-color: rgba(var(--background-saturated), 0.77);
+      & + .transition-elastic-fly-container {
+        /* max-height: 0; */
+      }
+      ul, p.summary {
+        margin: 0;
+        padding: 2rem;
+      }
+    }
     .post-item {
-      margin-top: 1.75rem;
+      /* margin-top: 1.75rem; */
       margin-bottom: 0;
       list-style-type: none;
       &:first-of-type {
-        margin-top: 0;
+        /* margin-top: 0; */
       }
       .post-item-summary,
       a {
-        transition: opacity 0.5s;
+        display: flex;
+        flex-direction: row;
         opacity: 0.67;
+        transition: opacity 0.5s;
+        &:hover,
+        &:focus {
+          opacity: 1;
+        }
       }
       &:hover,
       &:focus {
@@ -92,13 +122,12 @@
         a {
           opacity: 0.8;
         }
-      }
-      a {
-        display: flex;
-        flex-direction: row;
-        &:hover,
-        &:focus {
-          opacity: 1;
+        a {
+          opacity: 0.8;
+          &:hover,
+          &:focus {
+            opacity: 1;
+          }
         }
       }
       .post-item-heading {
@@ -137,13 +166,13 @@
     padding-left: 1rem;
     width: 25%;
     @screen sm {
-      padding-right: 1.5rem;
       display: block;
+      padding-right: 1.5rem;
     }
   }
 }
 
-.page-transition-container {
+.transition-fade-container {
   opacity: 1;
   transition: opacity 0.33s;
   overflow: hidden;
@@ -152,16 +181,11 @@
 .animating-page {
   overflow: hidden;
   .category {
-    .category-head,
-    .category-posts-list {
-      .page-transition-container {
-        opacity: 0;
-        &:last-of-type {
-          max-height: 0;
-        }
-        &:first-of-type:last-of-type {
-          max-height: 100%;
-        }
+    .transition-fade-container {
+      opacity: 0;
+      max-height: 100%;
+      & + .transition-fade-container {
+        max-height: 0;
       }
     }
   }
