--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -1,48 +1,19 @@
-.transition-container.category-page {
-  /* flex-grow: 0; */
-  /* justify-items: top; */
-}
 .category {
-  /* margin-top: 7rem; */
-  margin-bottom: 3.33rem;
-  border-radius: 0.5rem;
   border-top-right-radius: 0;
-  padding: 2.33rem 0;
+  padding: 0 0 1.5rem 0;
   @screen md {
-    /* margin-top: 5rem; */
-    padding: 2.33rem;
+    padding: 0 2.33rem 2rem;
   }
   .category-head {
     @apply dg--font-lb;
     display: flex;
     position: relative;
-    /* top: -6.5rem; */
     flex-direction: column;
     align-items: center;
-    /* padding-bottom: 1rem; */
-    @screen md {
-      /* top: -7.5rem; */
-      /* padding-bottom: 2rem; */
-    }
     h1.page-heading {
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
     }
     .category-name {
-      margin-bottom: 0;
-      max-width: 77%;
-      text-align: center;
-      span {
-        opacity: 0;
-        transition: opacity 0.5s;
-        &.fade-in {
-          opacity: 1;
-        }
-        &.fade-out {
-          opacity: 0;
-        }
-      }
-    }
-    p {
       max-width: 77%;
       text-align: center;
     }
@@ -54,12 +25,6 @@
       label {
         background-color: rgba(var(--background-saturated), 0.77);
       }
-    }
-    .transition-fade-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-width: 100%;
     }
   }
   .category-posts-list,
@@ -73,37 +38,23 @@
     }
   }
   .category-posts-list {
-    /* border: thin solid red; */
-    box-sizing: border-box;
     width: 100%;
-    & * {
-      /* border: thin solid red !important; */
-    }
     @screen sm {
       float: left;
-      width: 72%;
-    }
-    p.summary {
-      margin: 0;
-      padding-top: 0.75rem;
+      width: 77%;
     }
     .transition-elastic-fly-container {
       @apply shadow-xl;
       background-color: rgba(var(--background-saturated), 0.77);
-      & + .transition-elastic-fly-container {
-        /* max-height: 0; */
-      }
-      ul, p.summary {
-        margin: 0;
+      overflow: visible;
+      ul,
+      p.summary {
         padding: 2rem;
       }
     }
     .post-item {
-      /* margin-top: 1.75rem; */
-      margin-bottom: 0;
       list-style-type: none;
       &:first-of-type {
-        /* margin-top: 0; */
       }
       .post-item-summary,
       a {
@@ -122,12 +73,9 @@
         a {
           opacity: 0.8;
         }
-        a {
-          opacity: 0.8;
-          &:hover,
-          &:focus {
-            opacity: 1;
-          }
+        a:hover,
+        a:focus {
+          opacity: 1;
         }
       }
       .post-item-heading {
@@ -135,7 +83,7 @@
         flex-grow: 1;
         flex-direction: column;
         .post-title {
-          margin-bottom: 0;
+          margin-bottom: 0.5rem;
         }
         .post-date {
           font-size: 1rem;
@@ -163,8 +111,7 @@
     right: 0;
     float: right;
     opacity: 0.8;
-    padding-left: 1rem;
-    width: 25%;
+    width: 20%;
     @screen sm {
       display: block;
       padding-right: 1.5rem;
