--- a/front/src/lib/styles/pages/privacy.css
+++ b/front/src/lib/styles/pages/privacy.css
@@ -23,6 +23,18 @@
     @apply dg--font-psbl
       mt-0;
   }
+  a {
+    color: rgba(var(--link-rgb), 0.77);
+    border-bottom: 1px solid rgba(var(--text-accent-rgb), 0.67);
+    transition-property: border, color;
+    transition-duration: var(--transform-duration);
+    transition-timing-function: var(--transition-timing-function);
+    &:hover,
+    &:focus {
+      color: rgba(var(--foreground-rgb), 1);
+      border-bottom: 1px solid rgba(var(--highlight-rgb), 1);
+    }
+  }
   ol {
     counter-reset: item;
     list-style-type: none;
