--- a/front/src/lib/styles/pages/privacy.css
+++ b/front/src/lib/styles/pages/privacy.css
@@ -23,16 +23,19 @@
     @apply dg--font-psbl
       mt-0;
   }
+  h2.date mark {
+    display: inline-block;
+  }
   a {
-    color: rgba(var(--link-rgb), 0.77);
-    border-bottom: 1px solid rgba(var(--text-accent-rgb), 0.67);
-    transition-property: border, color;
     transition-duration: var(--transform-duration);
+    transition-property: border, color;
     transition-timing-function: var(--transition-timing-function);
+    border-bottom: 1px solid rgba(var(--text-accent-rgb), 0.67);
+    color: rgba(var(--link-rgb), 0.77);
     &:hover,
     &:focus {
-      color: rgba(var(--foreground-rgb), 1);
       border-bottom: 1px solid rgba(var(--highlight-rgb), 1);
+      color: rgba(var(--foreground-rgb), 1);
     }
   }
   ol {
@@ -49,6 +52,6 @@
     counter-increment: item;
   }
   ol > li::before {
-    content: counters(item, ".") ". ";
+    content: counters(item, '.') '. ';
   }
 }
