--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -131,12 +131,11 @@ body {
   &.ready {
     > div > .flourish {
       z-index: 0;
-      transition: max-height 0.5s;
+      transition: border 0.5s;
       transition-delay: 2s;
       box-shadow: none !important;
-      max-height: 0;
       @apply shadow-none;
-      border-top: 8px solid rgb(var(--foreground-rgb));
+      border-top: 8px solid transparent;
       background-color: transparent;
     }
     .header,
@@ -158,8 +157,7 @@ body {
       > div > .flourish {
         transition: max-height 1s ease-in-out 1s;
         box-shadow: none !important;
-        height: 100%;
-        max-height: 100%;
+        border-color: rgb(var(--foreground-rgb));
         @apply shadow-none;
       }
       .main section {
