--- a/front/src/lib/styles/base/transitions.css
+++ b/front/src/lib/styles/base/transitions.css
@@ -1,9 +1,18 @@
-.bio-picture {
-  opacity: 0.77;
+body:not(.ready) .bio-picture {
+  animation: 333ms ease-in-out fadeIn;
 }
 
 body.ready {
   .bio-picture {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
     opacity: 1;
   }
 }
