refactor(front): moves transition styles and updates bio bitmap onload animation

--- a/front/src/lib/styles/components/page-nav.css
+++ b/front/src/lib/styles/components/page-nav.css
@@ -169,3 +169,13 @@
     }
   }
 }
+
+.post,
+.category {
+  aside,
+  .page-navigation-list {
+    a {
+      display: inline-block;
+    }
+  }
+}
