--- a/front/src/lib/styles/base/transitions.css
+++ b/front/src/lib/styles/base/transitions.css
@@ -1,18 +1,68 @@
-body:not(.ready) .bio-picture {
-  animation: 333ms ease-in-out fadeIn;
-}
-
-body.ready {
-  .bio-picture {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  0% {
+body {
+  .header,
+  .footer,
+  .flourish,
+  .main section,
+  .main.main-secondary {
     opacity: 0;
+    transition: opacity;
+    @apply dg--transition-effect;
   }
-  100% {
-    opacity: 1;
+  .flourish {
+    transition-property: background-color, opacity;
+  }
+  &.ready {
+    > div > .flourish {
+      z-index: 0;
+      transition: border 0.5s;
+      transition-delay: 2s;
+      box-shadow: none !important;
+      @apply shadow-none;
+      border-top: 8px solid transparent;
+      background-color: transparent;
+    }
+    .header,
+    .footer,
+    .flourish,
+    .main section,
+    .main.main-secondary {
+      opacity: 1;
+    }
+    .flourish {
+      transition-property: background-color, opacity;
+    }
+    .main section {
+      transition: opacity, background-color;
+      @apply dg--transition-effect;
+    }
+    .footer {
+      transition: opacity 0.3s;
+    }
+    &.animating {
+      overflow: hidden;
+      > div > .flourish {
+        transition: max-height 1s ease-in-out 1s;
+        box-shadow: none !important;
+        border-color: rgb(var(--foreground-rgb));
+        @apply shadow-none;
+      }
+      .main section {
+        @apply dg--transition-effect
+      opacity-0
+      transition-opacity;
+      }
+      .scroll-top,
+      .footer {
+        opacity: 0;
+      }
+      .main .transition-container:first-of-type:last-of-type {
+        height: auto;
+        max-height: auto;
+      }
+      .main .transition-container:last-of-type {
+        height: 0;
+        max-height: 0;
+      }
+    }
   }
 }
